--- a/Developerorg/src/classes/AccountManager.cls
+++ b/Developerorg/src/classes/AccountManager.cls
@@ -2,6 +2,7 @@
 global with sharing class AccountManager{
     @HttpGet
     global static Account getAccount() {
+    	//Changed by rajesh
         RestRequest request = RestContext.request;
         // grab the caseId from the end of the URL
         String AccountId = request.requestURI.substring(
